# superteam-earn-community

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml
.github/: FUNDING.yml
database/: Cargo.toml
database/src/: connection.rs  lib.rs  schema.rs
database/src/helpers/: handler.rs
database/src/migrations/00000000000000_diesel_initial_setup/: up.sql
database/src/migrations/2024-06-03-055909_posts/: up.sql
database/src/migrations/2024-06-07-163142_discord/: down.sql
database/src/migrations/2024-06-17-063049_telegram/: down.sql  up.sql
database/src/models/: discord.rs  mod.rs  posts.rs  telegram.rs
dccommands/: Cargo.toml
dccommands/src/: connection.rs  events.rs  interaction.rs  lib.rs  main.rs
dccommands/src/commands/: mod.rs  ping.rs  settings.rs
dccommands/src/handler/: mod.rs  ping.rs  settings.rs
dccommands/src/helper/: mod.rs
dccommands/src/utils/: constants.rs  get.rs  mod.rs  requests.rs  set.rs
dccommands/src/worker/: report.rs
src/: environments.rs  main.rs
src/database/: connection.rs  mod.rs  schema.rs
src/database/helpers/: handler.rs
src/database/migrations/00000000000000_diesel_initial_setup/: down.sql
src/database/migrations/2024-06-03-055909_posts/: down.sql  up.sql
src/database/migrations/2024-06-07-163142_discord/: down.sql  up.sql
src/database/models/: discord.rs  posts.rs
src/discord/: connection.rs  events.rs  interaction.rs  mod.rs
src/discord/commands/: mod.rs  ping.rs
src/discord/helpers/: get.rs
src/earn/: constants.rs  mod.rs  watch.rs
telebot/: Cargo.toml
telebot/src/: connection.rs  constants.rs  lib.rs  main.rs
telebot/src/bounty/: message.rs
telebot/src/commands/: _404.rs  help.rs  mod.rs  start.rs  stop.rs
telebot/src/handlers/: chat.rs  message.rs  mod.rs
telebot/src/helpers/: commands.rs
