[package]
name = "superteam-earn-community"
version = "0.9.3"
edition = "2021"

[workspace]
members = [ 
  "database",
  "dccommands"
]

[dependencies]
dc_commands = { path = "dccommands" }
database = { path = "database" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
reqwest = "0.12.4"
serde_json = "1.0.117"
tokio = { default-features = false, features = ["macros", "signal", "rt-multi-thread", "time", "net"], version = "1.38.0" }
tokio-cron-scheduler = "0.10.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
