[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }