[package]
name = "telebot"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
teloxide = { version = "0.12.2", features = ["ctrlc_handler", "macros", "cache-me"]}
tokio = { default-features = false, features = ["macros","rt-multi-thread"], version = "1.38.0" }
dotenv = "0.15.0"
once_cell = "1.19.0"